<resources>
    <string name="app_name">Seven app</string>
    <!--Onboarding Walkthrough Screens -->
    <string name="screen1">Time management</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="screen2">Organization of events</string>
    <string name="screen3">Work done on time</string>
    <string name="screen1desk">Learn how to apply time management in your life with the help of this application.</string>
    <string name="screen2desk">Organize your events with only this application</string>
    <string name="screen3desk">Organizing work tasks is easy with this application</string>
    <string name="screen">Welcome to SEVEN!</string>
    <string name="startDesk">Create your perfect routine with this app</string>
    <string name="buttom1">Login now</string>

    <!--Login -->
    <string name="login">Login to your Account</string>
    <string name="login1">- Or sign in with -</string>
    <string name="login2">Don’t have an account?</string>
    <string name="sindup"> Sing up</string>
    <string name="login3">Forgot password ?</string>
    <string name="loginButton">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--Sing up-->
    <string name="name">Username</string>
    <string name="number">Phone number</string>
    <string name="name2">Name</string>
    <string name="account">Create your Account</string>
    <string name="agree">By signing up, you’re agree to our Terms and Conditions and Privacy Policy</string>
    <string name="buttonSingin">Sing in</string>
    <string name="Eror">Username cannot be empty</string>

    <!--Menu-->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>

    <!--Home-->
    <string name="all">All</string>
    <string name="completed">Сompleted</string>
    <string name="active">Active</string>
    <string name="todo">ToDo List</string>


    <!--description-->
    <string name="channel_description">Notifications which remind the event before its happened.</string>
    <string name="channel_name">Event notifications</string>
    <string name="reminder_created">Reminder created.</string>
    <string name="reminder_after_event">Reminder can not be after the event.</string>
    <string name="all_reminders_deleted">All reminders deleted.</string>
    <string name="old_repeat_warning">Events cant repeat twice. Could not save.</string>
    <string name="delete_old_repeats">Delete old repeats?</string>
    <string name="repeats_deleted">Repeats deleted successfully.</string>
    <string name="set_date">Set date</string>
    <string name="clear">Clear</string>
    <string name="every">Every</string>
    <string name="days">Days</string>
    <string name="never">Never</string>
    <string name="repetitions">Repetitions</string>
    <string name="until">Until</string>
    <string name="event_deleted">Event deleted</string>
    <string name="event_updated">The event has been updated.</string>
    <string name="event_created">The event has been created</string>
    <string name="event_name_empty">The event name cannot be empty</string>
    <string name="repeat_twice">Events cant repeat twice. Could not be saved</string>
    <string name="select_repeat">Please select repeat and duration type</string>

    <string name="daily">Daily</string>
    <string name="yearly">Yearly</string>

    <string name="select_ringtone_title">Select ringtone for notifications:</string>
    <string name="notification_saved">Notification sound saved</string>
    <string name="settings_saved">Settings saved</string>

    <!--Calendar-->
    <string name="today">TODAY</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="jan">JAN</string>
    <string name="feb">FEB</string>
    <string name="mar">MAR</string>
    <string name="apr">APR</string>
    <string name="may">MAY</string>
    <string name="jun">JUN</string>
    <string name="jul">JUL</string>
    <string name="aug">AUG</string>
    <string name="sep">SEP</string>
    <string name="oct">OCT</string>
    <string name="nov">NOV</string>
    <string name="dec">DEC</string>

    <!--Profile-->
    <string name="nameprifile">Username</string>
    <string name="emailAddress">Email Address</string>
    <string name="changePassword">Change Password</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="sing_out">Sing out</string>
    <string name="edit">Edit</string>
    <string name="darkMode">Dark Mode</string>


    <!--Edit Profile-->
    <string name="save">Save</string>
    <string name="back">Back</string>

    <!--Event-->
    <string name="event">Event</string>
    <string name="done">Done</string>
    <string name="all_day">All day</string>
    <string name="start">Starts</string>
    <string name="end">Ends</string>
    <string name="repeate">Repeate</string>
    <string name="reminder">Reminder</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="complete">Complete</string>
    <string name="add_a_event">Add a event</string>
    <string name="task">Task</string>
    <string name="event_date">Event date</string>
    <string name="event_time">Event time</string>
    <string name="titled">Title</string>
    <string name="before">Before</string>
    <string name="custom">Custom</string>
    <string name="date_interval_invalid">Date interval is not valid. Reminder could not be created.</string>
    <string name="invalid_date_interval">Invalid date interval. Could not save the event.</string>
    <string name="update_event">Update Event</string>

    <string name="add">Add</string>
    <string name="add_participants">Add participants</string>
    <string name="add_location">Add location</string>
    <string name="add_notification">Add notification</string>
    <string name="add_notes">Add notes</string>
    <string name="congrats_you_have_completed_the_task_successfully">Congrats!... You have completed the task successfully...</string>
    <string name="see_all_tasks">See all tasks</string>


    <!--location-->
    <string name="use_this_location">Use this location?</string>
    <string name="change_location">Change Location</string>
    <string name="select">Select</string>


    <!--Setting-->
    <string name="change">Change</string>
    <string name="ukrainianholidays">Ukrainian Holidays</string>

    <string name="setting">SETTINGS</string>
    <string name="default_reminder_time">Default Reminder Time</string>
    <string-array name="date_array">
        <item>minutes</item>
        <item>hours</item>
        <item>days</item>
    </string-array>
    <string name="default_notification_sound">Default Notification Sound</string>

    <string-array name="months">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>
    <string name="week_button">Choose a Week</string>
    <string name="settings">Settings</string>
    <string name="years">Years</string>
    <string name="monthss">months</string>
    <string name="forever">Forever</string>
    <string name="duration">Duration</string>
    <string name="m">M</string>
    <string name="tu">T</string>
    <string name="w">W</string>
    <string name="t">T</string>
    <string name="f">F</string>
    <string name="s">S</string>
    <string name="su">S</string>

</resources>