<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Repeat">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    tools:context=".Repeat">

    <Button
        android:id="@+id/clearButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/close_24"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButtonRepeat" />

    <RadioGroup
        android:id="@+id/repeatRadioGroup"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/neverR"
            android:layout_width="match_parent"
            android:textColor="@color/black"

            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/never"
            android:onClick="repeatCheck"/>

        <RadioButton
            android:id="@+id/dailyR"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"

            android:fontFamily="@font/poppins_semibold"
            android:text="@string/daily"
            android:onClick="repeatCheck"/>

        <RadioButton
            android:id="@+id/weeklyR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"

            android:fontFamily="@font/poppins_semibold"
            android:text="@string/weekly"
            android:onClick="repeatCheck"/>

        <RadioButton
            android:id="@+id/monthlyR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"

            android:fontFamily="@font/poppins_semibold"
            android:text="@string/monthly"
            android:onClick="repeatCheck"/>

        <RadioButton
            android:id="@+id/yearlyR"
            android:textColor="@color/black"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/yearly"
            android:onClick="repeatCheck"/>

    </RadioGroup>

        <TextView
            android:id="@+id/everyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/every"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/everyET"
            app:layout_constraintHorizontal_bias="0.869"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeatRadioGroup" />

        <EditText
        android:id="@+id/everyET"
        android:layout_width="52dp"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:inputType="numberDecimal"
        android:text="1"
            android:textColorHint="@color/black"
            android:textColor="@color/black"

            android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatRadioGroup" />

    <TextView
        android:id="@+id/dayTW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/days"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toEndOf="@+id/everyET"
        app:layout_constraintTop_toBottomOf="@+id/repeatRadioGroup" />

    <CheckBox
        android:id="@+id/mondayCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/m"
        android:textColor="@color/black"

        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/everyET"
        android:onClick="dayChecked" />

    <CheckBox
        android:id="@+id/wednesdayCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/w"
        android:textColor="@color/black"

        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/tuesdayCB"
        app:layout_constraintTop_toBottomOf="@+id/everyET"
        android:onClick="dayChecked"/>

    <CheckBox
        android:id="@+id/thursdayCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/t"
        android:textColor="@color/black"

        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/wednesdayCB"
        app:layout_constraintTop_toBottomOf="@+id/everyET"
        android:onClick="dayChecked"/>

    <CheckBox
        android:id="@+id/tuesdayCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tu"
        android:visibility="invisible"
        android:textColor="@color/black"

        app:layout_constraintStart_toEndOf="@+id/mondayCB"
        app:layout_constraintTop_toBottomOf="@+id/everyET"
        android:onClick="dayChecked"/>

    <CheckBox
        android:id="@+id/fridayCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/f"
        android:textColor="@color/black"

        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/thursdayCB"
        app:layout_constraintTop_toBottomOf="@+id/everyET"
        android:onClick="dayChecked"/>

    <CheckBox
        android:id="@+id/saturdayCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/s"
        android:textColor="@color/black"

        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/sundayCB"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toEndOf="@+id/fridayCB"
        app:layout_constraintTop_toBottomOf="@+id/everyET"
        android:onClick="dayChecked"/>

    <CheckBox
        android:id="@+id/sundayCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/su"
        android:textColor="@color/black"

        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.669"
        app:layout_constraintStart_toEndOf="@+id/fridayCB"
        app:layout_constraintTop_toBottomOf="@+id/everyET"
        android:onClick="dayChecked"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/repeate"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/durationRadioGroup"
        android:layout_width="138dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/durationText">

        <RadioButton
            android:id="@+id/foreverR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/forever"
            android:textColor="@color/black"

            android:onClick="durationCheck"/>

        <RadioButton
            android:id="@+id/repetationsR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/repetitions"
            android:textColor="@color/black"

            android:onClick="durationCheck"/>

        <RadioButton
            android:id="@+id/untilR"
            android:layout_width="match_parent"
            android:textColor="@color/black"

            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:onClick="durationCheck"
            android:text="@string/until" />
    </RadioGroup>

    <TextView
        android:id="@+id/durationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/duration"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thursdayCB" />

        <ImageButton
            android:id="@+id/calendarButton"
            android:layout_width="32dp"
            android:layout_height="33dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/black"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.171"
            app:layout_constraintStart_toEndOf="@+id/durationRadioGroup"
            app:layout_constraintTop_toBottomOf="@+id/repeatET"
            app:srcCompat="@android:drawable/ic_menu_today" />

        <EditText
            android:id="@+id/repeatET"
            android:layout_width="31dp"
            android:layout_height="35dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="72dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="1"
            android:textColor="@color/black"

            android:textAlignment="center"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/durationRadioGroup"
            app:layout_constraintTop_toBottomOf="@+id/durationText" />

        <Button
        android:id="@+id/saveButtonRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/black"
        android:text="@string/save"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/durationRadioGroup" />
    <TextView
        android:id="@+id/oldRepeat"
        android:layout_width="232dp"
        android:layout_height="27dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/repeate"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButtonRepeat" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>