<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    app:flow_horizontalAlign="center">

    <Button
        android:id="@+id/login_backButton"
        android:layout_width="41dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:backgroundTint="@color/white"
        android:drawableRight="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/seven"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="12dp"
        android:textSize="16sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/gray"
        android:background="@drawable/edittext_backround"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/logintext" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/edittext_backround"
        android:fontFamily="@font/poppins"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:hint="@string/password" />

    <TextView
        android:id="@+id/login_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login3"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"

        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/login_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/black"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:padding="14dp"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        />


    <TextView
        android:id="@+id/text7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/login2"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/sing_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sindup"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />


</LinearLayout>