<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">
    <TextView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/back_ios_24"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/back"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profilePhoto"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/avatar2"
        app:cornerRadius="36dp"
        android:layout_marginTop="95dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_backround"
        android:fontFamily="@font/poppins"
        android:hint="@string/name2"
        android:padding="12dp"
        android:textColorHint="@color/gray"
        android:textSize="14dp"
        android:layout_marginTop="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoto" />

    <EditText
        android:id="@+id/username_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_backround"
        android:fontFamily="@font/poppins"
        android:hint="@string/name"
        android:padding="12dp"
        android:textColorHint="@color/gray"
        android:textSize="14dp"
        android:layout_marginTop="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit" />

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_backround"
        android:fontFamily="@font/poppins"
        android:hint="@string/email"
        android:padding="12dp"
        android:textColorHint="@color/gray"
        android:textSize="14dp"
        android:layout_marginTop="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_edit" />

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_backround"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="34dp"
        android:inputType="textPassword"
        android:padding="12dp"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>