<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStarted"
    android:orientation="vertical"
    app:flow_horizontalAlign="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_marginTop="60dp"
        android:scaleType="centerCrop"
        android:src="@drawable/get_started" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/screen"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_semibold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/startDesk"
        android:textSize="20sp"
        android:layout_marginHorizontal="30dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_semibold"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/buttom1"
        android:id="@+id/startButton"
        android:padding="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        app:cornerRadius="12dp"
        android:backgroundTint="@color/black"/>



</LinearLayout>